Fix IE10 with button link spacing, by declaring display value

--- a/src/styles/modules/qn/Button.less
+++ b/src/styles/modules/qn/Button.less
@@ -4,6 +4,7 @@
   border: unit(2/16, em) solid @color-Interactive--400;
   border-radius: 0.25em;
   color: @color-Interactive--750;
+  display: inline-block;
   padding: unit(10/16, em);
   position: relative;
   text-decoration: none;
